# guile-syntax-highlight

./: .gitignore  Makefile.am  README  configure.ac  guix.scm  pre-inst-env.in  syntax-highlight.scm
syntax-highlight/: c.scm  css.scm  gitignore.scm  lexers.scm  lisp.scm  parsers.scm  scheme.scm  utils.scm  xml.scm
